--- a/index.html
+++ b/index.html
@@ -12,14 +12,11 @@
 </head>
 <body>
 
-<!-- 	<div id="landingDiv">
+	<div id="landingDiv">
 		<div id="logo"></div>
 		<div id="landingContent"></div>
-	</div>  -->
-
-	<div id="map">
-
-<!-- 
+	</div> 
+	
 		<div id="formContent" class="grid-container">
 			<div class="form">
 				<form id="APIform">
@@ -30,12 +27,17 @@
 			</div>
 		</div> 
 
-		<div class="fontAwesome">
+	<div id="map">
+
+ 
+
+
+<!-- 		<div class="fontAwesome">
 			<i class="fas fa-home"></i>
 			<i class="fas fa-hospital"></i>
 			<i class="fas fa-utensils"></i>
-		</div> 
--->
+		</div>  -->
+
 
 	</div> <!-- /map -->
 
