--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 	<!-- google maps API -->
 	<!-- Jesse's key -->
-	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCyqxMkhc31hKFwW7etsYUkj4PoaO0nSoo&libraries=places&callback=initAutocomplete"></script>
+	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCyqxMkhc31hKFwW7etsYUkj4PoaO0nSoo&libraries=places&nearbysearch&photo&callback=initMap"></script>
 
 
 
