--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
 					</div>
 					<div id="optionContainer">
 						<label>
-					  		<input type="radio" name="options" value="accommodation">
+					  		<input id="r1" type="radio" name="options" value="accommodation">
 					  		<div class="iconContainer"></div>
 					  		<p>ACCOMMODATION</p>
 						</label>
 						<label>
-					  		<input type="radio" name="options" value="parks">
+					  		<input id="r2" type="radio" name="options" value="parks">
 					  		<div class="iconContainer"></div>
 					  		<p>PARKS</p>
 						</label>
 						<label>
-					  		<input type="radio" name="options" value="restaurant">
+					  		<input id="r3" type="radio" name="options" value="restaurant">
 					  		<div class="iconContainer"></div>
 					  		<p>RESTAURANT</p>
 						</label>
