--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 					</div>
 					<div id="optionContainer">
 						<label>
-					  		<input id="r1" type="radio" name="options" value="accommodation">
+					  		<input id="r1" type="radio" name="options" value="lodging">
 					  		<div class="iconContainer"></div>
 					  		<p>ACCOMMODATION</p>
 						</label>
 						<label>
-					  		<input id="r2" type="radio" name="options" value="parks">
+					  		<input id="r2" type="radio" name="options" value="park">
 					  		<div class="iconContainer"></div>
 					  		<p>PARKS</p>
 						</label>
