--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 	<div id="wrapper">
 
 		<!-- homepage -->
-		<div id="titlePage">
+		<div id="homepage">
+			<div id="helpButton"><i class="fas fa-question"></i></div>
 			<div id="logo"></div>
-			<div id="landingContent"></div>
+			<button>Tap to Start</button>
 		</div> 
 		
 		<!-- form -->
