--- a/index.html
+++ b/index.html
@@ -24,34 +24,39 @@
 		<!-- form -->
 		<div id="formContent" class="grid-container">
 			<div class="form">
-				<form id="APIform">
-					<div id="searchContainer">
+				<div id="searchContainer">
+					<form id="APIform">
 						<input class="" id="formInput" name="ac" type="text" size="40">
 						<button type="button"  id="submitBtn" class="btn btn-outline-info"><i class="fas fa-search"></i></button>
-					</div>
-					<div id="optionContainer">
-						<label>
-					  		<input id="r1" type="radio" name="options" value="lodging">
-					  		<div class="iconContainer"></div>
-					  		<p>ACCOMMODATION</p>
-						</label>
-						<label>
-					  		<input id="r2" type="radio" name="options" value="park">
-					  		<div class="iconContainer"></div>
-					  		<p>PARKS</p>
-						</label>
-						<label>
-					  		<input id="r3" type="radio" name="options" value="restaurant">
-					  		<div class="iconContainer"></div>
-					  		<p>RESTAURANT</p>
-						</label>
-					</div>
+					</form>
+				</div>			
+
+			<!-- map -->
+			<div id="map"></div> 
+				
+			<div id="optionContainer">
+				<form>
+					<label>
+				  		<input id="r1" type="radio" name="options" value="lodging">
+				  		<div class="iconContainer"></div>
+				  		<p>ACCOMMODATION</p>
+					</label>
+					<label>
+				  		<input id="r2" type="radio" name="options" value="park">
+				  		<div class="iconContainer"></div>
+				  		<p>PARKS</p>
+					</label>
+					<label>
+				  		<input id="r3" type="radio" name="options" value="restaurant">
+				  		<div class="iconContainer"></div>
+				  		<p>RESTAURANT</p>
+					</label>
 				</form>
 			</div>
-		</div> 
+				
 
-		<!-- map -->
-		<div id="map"></div> 
+			</div>
+		</div> 
 	
 	</div>
 
