btn gone, radios working

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<div id="searchContainer">
 					<form id="APIform">
 						<input class="" id="formInput" name="ac" type="text" size="40">
-						<button type="button"  id="submitBtn"><i class="fas fa-search"></i></button>
+						<!-- <button type="button"  id="submitBtn"><i class="fas fa-search"></i></button> -->
 					</form>
 				</div>			
 
@@ -61,17 +61,17 @@
 			<div id="optionContainer">
 				<form>
 					<label>
-				  		<input id="changetype-lodging" type="radio" name="type" value="lodging">
+				  		<input id="changetype-lodging" class="radioBtn" type="radio" name="type" value="lodging">
 				  		<div class="iconContainer"><i class="fas fa-bed"></i></div>
 				  		<p>ACCOMMODATION</p>
 					</label>
 					<label>
-				  		<input id="changetype-park" type="radio" name="type" value="park">
+				  		<input id="changetype-park" class="radioBtn" type="radio" name="type" value="park">
 				  		<div class="iconContainer"><i class="fas fa-tree"></i></div>
 				  		<p>PARKS</p>
 					</label>
 					<label>
-				  		<input id="changetype-restaurant" type="radio" name="type" value="restaurant">
+				  		<input id="changetype-restaurant" class="radioBtn" type="radio" name="type" value="restaurant">
 				  		<div class="iconContainer"><i class="fas fa-utensils"></i></div>
 				  		<p>RESTAURANT</p>
 					</label>
@@ -124,9 +124,10 @@
 
 	<!-- custom js -->
 	<script type="text/javascript" src="js/custom.js"></script>
+	<script type="text/javascript" src="js/jordan.js"></script>
 	<script type="text/javascript" src="js/jesse.js"></script>
 	<script type="text/javascript" src="js/duke.js"></script>
-	<script type="text/javascript" src="js/jordan.js"></script>
+	
 	
 
 	<!-- google maps API -->
