--- a/index.html
+++ b/index.html
@@ -11,12 +11,25 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<style>
 
+		/*sorry Duke I put any styles i changed or added to in here so you could fix them up later / see what they are*/
+
 		#infowindow-content {
         	display: none;
         }
 
         #map #infowindow-content {
        		display: inline;
+        }
+
+        #logo{
+        	background-image: url('img/logo.svg');
+        	background-color: #F1C40F !important;
+        	width: 20em !important;
+        	height: 20em !important;
+
+        }
+        #formInput{
+			text-align: center;
         }
 
 	</style>
@@ -124,8 +137,9 @@
 
 	<!-- custom js -->
 	<script type="text/javascript" src="js/custom.js"></script>
-	<script type="text/javascript" src="js/jordan.js"></script>
 	<script type="text/javascript" src="js/jesse.js"></script>
+	<script type="text/javascript" src="js/jordan.js"></script>
+	
 	<script type="text/javascript" src="js/duke.js"></script>
 	
 	
