--- a/index.html
+++ b/index.html
@@ -76,17 +76,17 @@
 					<label>
 				  		<input id="changetype-lodging" class="radioBtn" type="radio" name="type" value="lodging">
 				  		<div class="iconContainer"><i class="fas fa-bed"></i></div>
-				  		<p>ACCOMMODATION</p>
+				  		<!-- <p>ACCOMMODATION</p> -->
 					</label>
 					<label>
 				  		<input id="changetype-park" class="radioBtn" type="radio" name="type" value="park">
 				  		<div class="iconContainer"><i class="fas fa-tree"></i></div>
-				  		<p>PARKS</p>
+				  		<!-- <p>PARKS</p> -->
 					</label>
 					<label>
 				  		<input id="changetype-restaurant" class="radioBtn" type="radio" name="type" value="restaurant">
 				  		<div class="iconContainer"><i class="fas fa-utensils"></i></div>
-				  		<p>RESTAURANT</p>
+				  		<!-- <p>RESTAURANT</p> -->
 					</label>
 				</form>
 
