--- a/index.html
+++ b/index.html
@@ -91,20 +91,7 @@
 				</form>
 			</div>
 		</div> 
-		
-
-
-
-
-
-
-
-
-
-
-
-
-
+	
 
 
 
@@ -123,7 +110,7 @@
 
 	<!-- google maps API -->
 	<!-- Jesse's key -->
-	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCyqxMkhc31hKFwW7etsYUkj4PoaO0nSoo&libraries=places&nearbysearch&photo&callback=initMap"></script>
+	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCyqxMkhc31hKFwW7etsYUkj4PoaO0nSoo&libraries=places&nearbysearch&callback=initMap"></script>
 
 
 
