--- a/index.html
+++ b/index.html
@@ -39,18 +39,18 @@
 	<div id="wrapper">
 
 		<!-- homepage -->
-		<div id="homepage">
+<!-- 		<div id="homepage">
 			<div id="helpButton"><i class="fas fa-question"></i></div>
 			<div id="logo"></div>
 			<h1>Tap to Start</h1>
-		</div> 
+		</div>  -->
 		
 		<!-- help content -->
-		<div id="helpContainer">
+<!-- 		<div id="helpContainer">
 			<div id="helpContent">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto excepturi quaerat fugit velit assumenda molestiae amet et repellendus minima sapiente, consequuntur, distinctio. Quos corporis molestiae voluptas sapiente eaque id dignissimos.</p>
 			</div>
-		</div>
+		</div> -->
 		
 		<!-- form -->
 		<div id="formContent">
