--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 	<!-- custom stylesheet -->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<!-- typeface -->
+	<link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
 </head>
 <body>
 	
@@ -16,15 +18,27 @@
 
 		<!-- homepage -->
 		<div id="homepage">
-			<div id="helpButton"><i class="fas fa-question"></i></div>
-			<div id="logo"></div>
-			<h1>Tap to Start</h1>
+			<img src="img/logo2.png" alt="on my way logo">
+			<div id="intCont">
+				<div id="helpButton">
+					<i class="fas fa-question"></i>
+				</div>
+				<div class="tapCont">
+					<h1 class="tap">Tap to Start</h1>
+				</div>
+			</div>	
 		</div> 
 		
 		<!-- help content -->
 		<div id="helpContainer">
 			<div id="helpContent">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto excepturi quaerat fugit velit assumenda molestiae amet et repellendus minima sapiente, consequuntur, distinctio. Quos corporis molestiae voluptas sapiente eaque id dignissimos.</p>
+				<h2>ABOUT US</h2>
+				<p>ON MY WAY is a way finding and location informative app that specifically focuses on Accommodations, Parks and Restaurants in New Zealand.</p>
+				<h2>HOW TO USE</h2>
+				<p>1. Enter a location.</p>
+				<p>2. Select a category.</p>
+				<p>3. Tap pin to show information.</p>
+				<p>4. Tap 'Get Direction' to access guide.</p>
 			</div>
 		</div>
 		
