--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>omw</title>
+	<link rel="icon" href="img/logo.png">
 	<!-- bootstrap css npm -->
 	<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
 	<!-- custom stylesheet -->
